force-app/main/default/objects/ServiceAppointment/fields/SubMotivoCancelamento__c.field-meta.xml
<CustomField>
    <fullName>SubMotivoCancelamento__c</fullName>
    <label>SubMotivo de Cancelamento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MotivoCancelamento__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amil</fullName>
            </value>
            <value>
                <fullName>Betim</fullName>
            </value>
            <value>
                <fullName>BH</fullName>
            </value>
            <value>
                <fullName>Bradesco</fullName>
            </value>
            <value>
                <fullName>CNPJ menor que 180 dias</fullName>
            </value>
            <value>
                <fullName>CPF</fullName>
            </value>
            <value>
                <fullName>Doc. de vínculo</fullName>
            </value>
            <value>
                <fullName>Doc. saúde menor de 12 meses</fullName>
            </value>
            <value>
                <fullName>Lagoa Santa</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Planomed</fullName>
            </value>
            <value>
                <fullName>Pedro Leopoldo</fullName>
            </value>
            <value>
                <fullName>Planovendas</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Promed</fullName>
            </value>
            <value>
                <fullName>Samp</fullName>
            </value>
            <value>
                <fullName>Santa Bárbara</fullName>
            </value>
            <value>
                <fullName>Santa Luzia</fullName>
            </value>
            <value>
                <fullName>Satulia</fullName>
            </value>
            <value>
                <fullName>Saúde Sistema</fullName>
            </value>
            <value>
                <fullName>Sulamérica</fullName>
            </value>
            <value>
                <fullName>União estável</fullName>
            </value>
            <value>
                <fullName>Unimed BH</fullName>
            </value>
            <value>
                <fullName>Unimed CO - Irmã</fullName>
            </value>
            <value>
                <fullName>Unisaúde</fullName>
            </value>
            <value>
                <fullName>Palnomed</fullName>
                <isActive>false</isActive>
                <label>Palnomed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>