force-app/main/default/objects/ServiceAppointment/fields/TipoAtendimento__c.field-meta.xml
<CustomField>
    <fullName>TipoAtendimento__c</fullName>
    <formula>Lead__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de atendimento</label>
    <type>Text</type>
</CustomField>