force-app/main/default/objects/ServiceAppointment/fields/TipoCliente__c.field-meta.xml
<CustomField>
    <fullName>TipoCliente__c</fullName>
    <formula>TEXT(Lead__r.TipoCliente__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de cliente</label>
    <type>Text</type>
</CustomField>