force-app/main/default/objects/ServiceAppointment/fields/TipoDeCliente__c.field-meta.xml
<CustomField>
    <fullName>TipoDeCliente__c</fullName>
    <formula>TEXT( Lead__r.TipoCliente__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Cliente</label>
    <type>Text</type>
</CustomField>