force-app/main/default/objects/ServiceAppointment/fields/TRIMESTRE_VISITA__c.field-meta.xml
<CustomField>
    <fullName>TRIMESTRE_VISITA__c</fullName>
    <formula>CASE(1,
IF(((SchedStartTime &gt;= DATETIMEVALUE(&apos;2020-12-17 00:00:00&apos;) &amp;&amp; SchedStartTime &lt;= DATETIMEVALUE(&apos;2021-03-22 23:59:59&apos;))|| ISBLANK(SchedStartTime)),1,0),&apos;1º TRIMESTRE&apos;,

IF((SchedStartTime &gt;= DATETIMEVALUE(&apos;2021-03-23 00:00:00&apos;) &amp;&amp; SchedStartTime &lt;= DATETIMEVALUE(&apos;2021-06-21 23:59:59&apos;)),1,0),&apos;2º TRIMESTRE&apos;,

IF((SchedStartTime &gt;= DATETIMEVALUE(&apos;2021-06-22 00:00:00&apos;) &amp;&amp; SchedStartTime &lt;= DATETIMEVALUE(&apos;2021-09-21 23:59:59&apos;)),1,0),&apos;3º TRIMESTRE&apos;,

IF((SchedStartTime &gt;= DATETIMEVALUE(&apos;2021-09-22 00:00:00&apos;) &amp;&amp; SchedStartTime &lt;= DATETIMEVALUE(&apos;2021-12-17 23:59:59&apos;)),1,0),&apos;4º TRIMESTRE&apos;,

&apos;&apos;)</formula>
    <label>TRIMESTRE VISITA</label>
    <type>Text</type>
</CustomField>