force-app/main/default/objects/ServiceAppointment/fields/Venda_Realizada__c.field-meta.xml
<CustomField>
    <fullName>Venda_Realizada__c</fullName>
    <label>Venda Realizada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>