force-app/main/default/objects/ServiceAppointment/validationRules/ImpedeDataPassada.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedeDataPassada</fullName>
    <active>true</active>
    <description>Impede que o usuário realize um agendamento com uma data anterior ao dia atual.</description>
    <errorConditionFormula>AND(EarliestStartTime &lt; NOW()
,
ISNEW()
)</errorConditionFormula>
    <errorMessage>Data do agendamento não pode ser anterior ao dia de hoje.</errorMessage>
</ValidationRule>