force-app/main/default/objects/ServiceAppointment/validationRules/StatusCancelado.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusCancelado</fullName>
    <active>true</active>
    <description>Obrigar o preenchimento do Motivo do cancelamento quando o Status for Cancelado</description>
    <errorConditionFormula>AND(ISPICKVAL(Status, &apos;Canceled&apos;),ISBLANK(TEXT(MotivoCancelamento__c)))</errorConditionFormula>
    <errorDisplayField>MotivoCancelamento__c</errorDisplayField>
    <errorMessage>Motivo de cancelamento deve ser preenchido</errorMessage>
</ValidationRule>