force-app/main/default/objects/ServiceAppointment/validationRules/StatusReagendado.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusReagendado</fullName>
    <active>true</active>
    <description>Obrigar o preenchimento do Motivo do reagendamento quando o Status for Reagendado</description>
    <errorConditionFormula>AND(ISPICKVAL(Status, &apos;Rescheduled&apos;),ISBLANK(TEXT(MotivoReagendamento__c)))</errorConditionFormula>
    <errorDisplayField>MotivoReagendamento__c</errorDisplayField>
    <errorMessage>Motivo de Reagendamento deve ser preenchido</errorMessage>
</ValidationRule>