force-app/main/default/objects/ServiceAppointment/listViews/Criados_por_mim.listView-meta.xml
<ListView>
    <fullName>Criados_por_mim</fullName>
    <columns>Name</columns>
    <columns>SchedStartTime</columns>
    <columns>Status</columns>
    <columns>ServiceResource__c</columns>
    <columns>CPFCNPJId__c</columns>
    <columns>Lead__c</columns>
    <columns>CreatedBy</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CriadoPorMim__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Criados por mim</label>
</ListView>