force-app/main/default/objects/ServiceAppointment/listViews/Todas.listView-meta.xml
<ListView>
    <fullName>Todas</fullName>
    <columns>Name</columns>
    <columns>SchedStartTime</columns>
    <columns>Status</columns>
    <columns>ServiceResource__c</columns>
    <columns>CPFCNPJId__c</columns>
    <columns>Lead__c</columns>
    <columns>CreatedBy</columns>
    <columns>CreatedDate</columns>
    <columns>Owner</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>