force-app/main/default/objects/ServiceAppointment/listViews/Visitas.listView-meta.xml
<ListView>
    <fullName>Visitas</fullName>
    <columns>SchedStartTime</columns>
    <columns>Lead__c</columns>
    <columns>Status</columns>
    <columns>TipoCliente__c</columns>
    <columns>TipoAtendimento__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SchedStartTime</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:45</value>
    </filters>
    <filters>
        <field>SchedStartTime</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:45</value>
    </filters>
    <label>Visitas</label>
</ListView>