force-app/main/default/objects/ServiceAppointment/listViews/Visitas_em_aberto.listView-meta.xml
<ListView>
    <fullName>Visitas_em_aberto</fullName>
    <columns>Name</columns>
    <columns>EarliestStartTime</columns>
    <columns>Status</columns>
    <columns>Corretora__c</columns>
    <columns>ServiceResource__c</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Scheduled,In Progress,Canceled,Rescheduled,Completed</value>
    </filters>
    <filters>
        <field>ServiceResource__c</field>
        <operation>equals</operation>
        <value>Guilherme Brito</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Scheduled,In Progress</value>
    </filters>
    <label>Visitas em aberto</label>
</ListView>